@@ -24,6 +24,7 @@ from Products.CMFTestCase.setup import CMF15
 from Products.CMFTestCase.setup import CMF16
 from Products.CMFTestCase.setup import CMF20
 from Products.CMFTestCase.setup import CMF21
+from Products.CMFTestCase.setup import CMF22
 from Products.CMFTestCase.setup import USELAYER
 from Products.CMFTestCase.setup import Z3INTERFACES
 from Products.CMFTestCase.setup import portal_name
